# localize-dialog-sample

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  menu.rs
src/window_main/: App.css  App.tsx  main.tsx  styles.css
