[package]
name = "localize-dialog-sample"
version = "1.0.0"
description = "A Tauri App"
authors = ["sttk3.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "localize_dialog_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.8.3", features = [] }
anyhow = "1"
tauri-plugin-dialog = "2"

[profile.dev.package.objc2]
debug-assertions = false
